--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<GridLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
-</LinearLayout>
+        android:rowCount="6"
+        android:columnCount="4"
+        tools:context=".activity.MainActivity">
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="4"
+            android:textSize="50sp"
+            android:layout_marginLeft="2pt"
+            android:layout_marginRight="2pt"
+            android:padding="3pt"
+            android:layout_gravity="right"
+            android:background="#eee"
+            android:textColor="#000"
+            android:text="0"/>
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_columnSpan="4"
+    android:text="清除"/>
+</GridLayout>
